# gpudrum

./: .gitignore  LICENSE.txt  README.md
gpu/cuda/simple-modal-filterbank/: .gitignore  ModalFilterbankGPU.vcxproj  kernel.cu
plugin/: CMakeLists.txt  LICENSE.md
plugin/plugin/: CMakeLists.txt
plugin/plugin/include/JuceGPUDrum/: MacSharedMemoryRegion.h  ModeLoader.h  ParameterIDs.hpp  PluginEditor.h  PluginProcessor.h  globals.h
plugin/plugin/source/: ModeLoader.cpp  PluginEditor.cpp  PluginProcessor.cpp
res/modecoeffs/: 10_zild_a_custom_splash  13_sab_dejonte_crash  13_sab_elsabor_splash  14_zild_1960s_vintage  16_paiste_twenty_thin  16_sab_hhx_evo  16_sab_hhx_evo_alternate_recording  16_sab_hhx_ozone  16_sab_hhxtreme  16_zild_1960s_vintage  16_zild_avedis_vintage  16_zild_k_dark  17_hhx_evo  18_paiste_2002_black_vintage  18_sab_hhx  18_sab_hhx_1  18_sab_hhx_ozone  18_sab_hhxtreme  18_zild_a_custom  18_zild_avedis_vintage  18_zild_k_dark  18_zild_k_med_dark  18_zild_k_med_dark_crash  19_sab_aa_medthin  19_sab_mediumthin  19_sab_paragon_CHINA  19_zild_1960s_vintage  19_zild_a_custom_projection  19_zild_k_c_hybrid_CHINA  19_zild_k_const  19_zild_k_cust_hybrid  20_paiste_2002_black_vintage  20_sab_hhx_ride  20_sab_vault_crash  20_zild_a_custom  20_zild_avedis_vintage  20_zild_oriental_crash_doom  21_sab_aaxplosion  22_zild_avedis_crash_ride  cowbell_BB  (+34 more)
util/: midi2events.py
webui/: package-lock.json  package.json
webui/src/: drum-panel.js  index.html  interposer.js  main.css  slider.js
